# hello-dyn

./: .gitignore  README.md  hello-dyn.sln  run_all.sh
hello-dyn-cpp/: Makefile  calculator.h  calculator_impl.cpp  calculator_loader  run.sh
hello-dyn-cpp/app/: CMakeLists.txt  main.cpp  run.sh
hello-dyn-csharp/: CalculatorImplementations.cs  DynamicCalculatorLoader.cs  ICalculator.cs  Program.cs  run.sh
hello-dyn-csharp/app/: CalculatorApp.csproj  DynamicCalculatorLoader.cs  Program.cs  run.sh
hello-dyn-dart/: pubspec.yaml  run.sh
hello-dyn-dart/app/: run.sh
hello-dyn-dart/calculator_app/: pubspec.yaml
hello-dyn-dart/calculator_lib/: pubspec.yaml
hello-dyn-dart/lib/: calculator.dart  calculator_implementations.dart  dynamic_loader.dart
hello-dyn-go/: calculator.go  go.mod  go.work  loader.go  main.go  run.sh
hello-dyn-go/app/: go.mod  loader.go  main.go  run.sh
hello-dyn-java/: AdvancedCalculator.java  BasicCalculator.java  Calculator.java  DynamicCalculatorLoader.java  run.sh
hello-dyn-kotlin/: .gitignore  build.gradle.kts  run.sh  settings.gradle.kts
hello-dyn-python/: advanced_calculator.py  basic_calculator.py  calculator_base.py  clean.sh  dynamic_loader.py  run.sh
hello-dyn-python/app/: README.md  pyproject.toml  run.sh
hello-dyn-python/app/calculator_app/: __init__.py  dynamic_loader.py  main.py
hello-dyn-rust/: Cargo.toml  run.sh
hello-dyn-swift/: Calculator.swift  DynamicLoader.swift  Package.swift  main.swift  run.sh
hello-dyn-typescript/: README.md  package-lock.json  package.json  run-dev.sh  run.sh  tsconfig.json
(+28 files in other folders)
